--- a/csss/style.css
+++ b/csss/style.css
@@ -58,6 +58,9 @@
     0% {
         top: -450px;
     }
+    25% {
+        top: 260px;
+    }
 
     50% {
         top: 260px;
@@ -118,6 +121,9 @@
 @-o-keyframes himera-logo {
     0% {
         top: -450px;
+    }
+    25% {
+        top: 260px;
     }
 
     50% {
@@ -248,6 +254,10 @@
             top: -450px;
         }
 
+        25% {
+            top: 160px;
+        }
+
         50% {
             top: 160px;
         }
@@ -270,6 +280,10 @@
             top: -450px;
         }
 
+        25% {
+            top: 160px;
+        }
+
         50% {
             top: 160px;
         }
@@ -290,6 +304,10 @@
     @-o-keyframes himera-logo {
         0% {
             top: -450px;
+        }
+
+        25% {
+            top: 160px;
         }
 
         50% {
@@ -316,6 +334,10 @@
             top: -450px;
         }
 
+        25% {
+            top: 160px;
+        }
+
         50% {
             top: 160px;
         }
@@ -337,6 +359,10 @@
             top: -450px;
         }
 
+        25% {
+            top: 160px;
+        }
+
         50% {
             top: 160px;
         }
@@ -356,6 +382,10 @@
     @-o-keyframes himera-logo {
         0% {
             top: -450px;
+        }
+
+        25% {
+            top: 160px;
         }
 
         50% {
@@ -382,6 +412,10 @@
             top: -450px;
         }
 
+        25% {
+            top: 160px;
+        }
+
         50% {
             top: 160px;
         }
@@ -404,6 +438,10 @@
             top: -450px;
         }
 
+        25% {
+            top: 160px;
+        }
+
         50% {
             top: 160px;
         }
@@ -424,6 +462,10 @@
     @-o-keyframes himera-logo {
         0% {
             top: -450px;
+        }
+
+        25% {
+            top: 160px;
         }
 
         50% {
